<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/alertTitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/alerts"
        app:fontFamily="@font/open_sans"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_18ssp" />

    <FrameLayout
        android:id="@+id/banner_container"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </FrameLayout>

    <TextView
        android:id="@+id/alertSubtitleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        app:fontFamily="@font/open_sans"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/save_your_changes_successfully"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <TextView
            android:id="@+id/yes_btn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/yes"
            android:textSize="@dimen/_14ssp"
            app:fontFamily="@font/open_sans"
            android:textColor="@color/black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/ok_btn"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            app:fontFamily="@font/open_sans"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>
</LinearLayout>